Open-source link
Adding open-source link to bottom of the application. linking to the public GitHub repository

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </div>
       <footer>
-        <p class="signiture">Coded by <a href="https://www.linkedin.com/in/jennifer-boardman-3a506494/"> Jennifer Boardman</a></p>
+        <p class="signiture"> <a href="https://github.com/JenBoardman/weather-application">Open-source code</a> by <a href="https://www.linkedin.com/in/jennifer-boardman-3a506494/"> Jennifer Boardman</a></p>
       </footer>
     </div>
     <script src="src/index.js"></script>
